<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Groupies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_user_name_hint">Enter user name</string>
    <string name="login_password_hint">Enter password</string>
    <string name="login_button_label">Login</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_sign_up">Sign up.</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="signup_email_hint">E-mail address</string>
    <string name="signup_password_hint">Choose a password</string>
    <string name="signup_user_name_hint">Choose a user name</string>
    <string name="signup_button_label">Create Account</string>
    <string name="title_activity_home">Home</string>
    <string name="home_name_label">User name</string>
    <string name="home_email_label">Email address</string>
    <string name="home_event_title_label">Event title</string>
    <string name="home_event_time_label">Event date / time</string>
    <string name="home_event_host_label">Host name</string>
    <string name="event_details_title">Event Details</string>
    <string name="event_name_title">Name</string>
    <string name="event_time_title">Time</string>
    <string name="event_organizer_title">Organizer</string>
    <string name="event_desc_title">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mini_map">Mini Map</string>
    <string name="attendees_title">Attendees</string>
    <string name="title_activity_new_event">Create New Event</string>
    <string name="action_new_event">New Event</string>
    <string name="action_edit_event">Edit Event</string>
    <string name="label_event_name">Event Name</string>
    <string name="label_event_host">Hosted by</string>
    <string name="label_event_start_date">Start</string>
    <string name="label_event_location">Location</string>
    <string name="label_event_description">Description</string>
    <string name="label_event_invites">Invites:</string>
    <string name="hint_event_date">07/05/2014</string>
    <string name="btn_label_submit_event">Submit Event</string>
    <string name="label_event_time">Time:</string>
    <string name="hint_event_time">10:30 am</string>
    <string name="join_event">Join</string>
    <string name="leave_event">Leave</string>
    <string name="hint_title">Title</string>
    <string name="label_event_end_date">End</string>
    <string name="tag_start_date">startDate</string>
    <string name="tag_start_time">startTime</string>
    <string name="tag_end_time">endTime</string>
    <string name="tag_end_date">endDate</string>
    <string name="login_forgot_password_label">Forgot your password?</string>
    <string name="hint_invites">userFoo, userBar</string>
    <string name="hint_location">1234 Sample Street, CA 00000</string>
    <string name="hint_description">This is an event</string>
    <string name="view_attendees">View Attendees</string>
    <string name="title_activity_full_map">Full Map</string>
    <string name="title_activity_invite_detail">Invitation to </string>
    <string name="accept_invite">Accept</string>
    <string name="reject_invite">Reject</string>
    <string name="title_activity_update_event">Update Event</string>
    <string name="msg_missing_incorrect_location">Location cannot be null</string>
    <string name="last_update">Last update</string>
    <string name="send_message_hint">Type message here</string>
    <string name="send_message">Send</string>
    <string name="join_chat">Join Chat</string>
    <string name="share_location">Share Location</string>
    <string name="details">Details</string>
    <string name="location">Location</string>

    <!-- for event creation validation -->
    <string name="error_intro">"Please "</string>
    <string name="error_invalid_invitees_plural_end">" are not valid users"</string>
    <string name="error_invalid_invitees_singular_end">" is not a valid user"</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_blank_location">enter a location</string>
    <string name="error_join">", and "</string>
    <string name="error_end">". "</string>
    <string name="error_blank_title">enter a title</string>
    <string name="error_blank_invitees">invite at least one person</string>
    <string name="error_invalid_invitees_begin">"fix invitees. "</string>
    <string name="error_invalid_location">Please enter a valid address.</string>
    <string name="error_network_error_retrieving_location">Network error retrieve location.  Please try again.</string>
    <string name="error_invalid_date">The end date must be after the start date.</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="reset_password">Forgot password</string>

    <!-- for changing password -->
    <string name="label_new_password">New password</string>
    <string name="label_change_password">Change password</string>
    <string name="label_verify_password">Verify password</string>
    <string name="password_changed">Successfully change password</string>
    <string name="action_sign_out">Sign Out</string>

    <!-- for sliding menu -->
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Profile</item>
        <item>Sign out</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_profile</item>
        <item>@drawable/ic_sign_out</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Profile Fragment -->
    <string name="label_user_name">Username:</string>
    <string name="label_email">Email:</string>
    <string name="dialog_sign_out">Are you sure you want to sign out?</string>
    <string name="alert_sign_out">Sign out</string>
    <string name="alert_cancel">Cancel</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="user_details">User Details</string>
    <string name="msg_no_invitations">You have no invitations</string>
    <string name="msg_no_events">You have no events</string>

</resources>
