<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/etLoginUserName"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/login_user_name_hint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etLoginPassword"
        android:layout_below="@+id/etLoginUserName"
        android:hint="@string/login_password_hint"
        android:layout_alignRight="@+id/etLoginUserName"
        android:layout_alignEnd="@+id/etLoginUserName"
        android:layout_alignLeft="@+id/etLoginUserName"
        android:layout_alignStart="@+id/etLoginUserName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_label"
        android:id="@+id/btLogin"
        android:layout_below="@+id/etLoginPassword"
        android:layout_alignRight="@+id/etLoginPassword"
        android:layout_alignEnd="@+id/etLoginPassword"
        android:layout_alignLeft="@+id/etLoginPassword"
        android:layout_alignStart="@+id/etLoginPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/tvLoginBanner"
        android:layout_marginBottom="63dp"
        android:layout_above="@+id/etLoginUserName"
        android:textSize="60sp"
        android:textColor="@color/blue"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llLoginSignUp"
        android:longClickable="true"
        android:layout_below="@+id/btLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_no_account"
            android:id="@+id/tvLoginNoAccount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_sign_up"
            android:id="@+id/tvLoginSignUp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/blue" />
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/login_forgot_password_label" android:id="@+id/tvForgotPassword"
              android:layout_below="@+id/llLoginSignUp" android:layout_centerHorizontal="true"
              android:layout_marginTop="16dp" android:textColor="@color/blue"/>

</RelativeLayout>