<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sms.partyview.activities.EventDetailActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llEventInfo">
        <TextView
            android:id="@+id/tvEventDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/event_details_title"
            android:padding="2dp"/>
        <TextView
            android:id="@+id/tvEventNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name_title"
            android:padding="2dp"/>
        <TextView
            android:id="@+id/tvEventTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_time_title"
            android:padding="2dp"/>
        <TextView
            android:id="@+id/tvEventOrganizerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_organizer_title"
            android:padding="2dp"/>
        <TextView
            android:id="@+id/tvEventDescTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_desc_title"
            android:padding="2dp"/>
    </LinearLayout>
    <!-- updating this later, just want to test that the map shows -->
    <LinearLayout
        android:id="@+id/llMap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/llEventInfo">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMiniMap"
            android:text="@string/mini_map"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="2dp"/>
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:name="com.google.android.gms.maps.MapFragment"
            android:padding="2dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_below="@+id/llMap">
        <TextView
            android:id="@+id/tvAttendeesTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="2dp"
            android:text="@string/attendees_title"/>
        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/lvAttendees">
        </ListView>
    </LinearLayout>


</RelativeLayout>