<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sms.partyview.activities.HomeActivity" >
    <item android:id="@+id/action_new_event"
          android:icon="@drawable/ic_action_new_event"
          android:title="@string/action_new_event"
          android:showAsAction="ifRoom|withText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_action_setting"
          android:title="@string/action_settings"
          android:showAsAction="ifRoom|withText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

    <item android:id="@+id/action_sign_out"
          android:icon="@drawable/ic_action_sign_out"
          android:title="@string/action_sign_out"
          android:showAsAction="never"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
</menu>
