<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
        <TextView
            style="@style/SectionTitles"
            android:text="@string/user_details"/>

        <TextView
                android:id="@+id/tvLabelNewPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_new_password"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tvLabelVerifyPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_verify_password"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <EditText
                android:id="@+id/etVerifyPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

    </LinearLayout>

    <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/label_change_password"
            android:enabled="false"/>

</LinearLayout>
