<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_card">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/home_event_title_label"
            android:id="@+id/tvEventItemTitle" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:textColor="@color/custom_teal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/home_event_host_label"
            android:id="@+id/tvEventItemHost" android:layout_below="@+id/tvEventItemTitle"
            android:layout_alignLeft="@+id/tvEventItemTitle"
            android:layout_alignStart="@+id/tvEventItemTitle"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/home_event_time_label"
            android:id="@+id/tvEventItemTime"
            android:layout_below="@+id/tvEventItemHost"
            android:layout_alignLeft="@+id/tvEventItemHost"
            android:layout_alignStart="@+id/tvEventItemHost"/>
</RelativeLayout>